@@ -1,460 +1,28 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>fr.insee.eno</groupId>
+  <artifactId>eno</artifactId>
+  <packaging>pom</packaging>
+  <version>${eno.version}</version>
+  <name>eno</name>
+  <url>http://maven.apache.org</url>
 
-	<groupId>fr.insee.eno</groupId>
-	<artifactId>eno-core</artifactId>
-	<version>2.20.1</version>
-	<packaging>jar</packaging>
+  <properties>
+    <eno.version>2.20.1</eno.version>
+    <java.version>17</java.version>
+  </properties>
 
-	<name>Eno – Questionnaire generator</name>
-	<description>Eno is a tool that generates survey questionnaires starting from their formal description in DDI</description>
-	<url>https://inseefr.github.io/Eno/eno-for-dummies</url>
-	<organization>
-		<name>Insee</name>
-		<url>https://www.insee.fr</url>
-	</organization>
-
-	<licenses>
-		<license>
-			<name>MIT License</name>
-			<url>https://opensource.org/licenses/MIT</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
-
-	<developers>
-		<developer>
-			<name>François Bulot</name>
-		</developer>
-		<developer>
-			<name>Laurent Caouissin</name>
-		</developer>
-		<developer>
-			<name>Nicolas Sénave</name>
-		</developer>
-	</developers>
-
-	<contributors>
-		<contributor>
-			<name>Guillaume Jardillier</name>
-		</contributor>
-		<contributor>
-			<name>Eric Sigaud</name>
-		</contributor>
-		<contributor>
-			<name>Benoit Werquin</name>
-		</contributor>
-		<contributor>
-			<name>Ophélie Rogel</name>
-		</contributor>
-		<contributor>
-			<name>Athémane Dahmouh</name>
-		</contributor>
-		<contributor>
-			<name>Franck Cotton</name>
-		</contributor>
-		<contributor>
-			<name>Thomas Dubois</name>
-		</contributor>
-		<contributor>
-			<name>Heïdi Koumarianos</name>
-		</contributor>
-		<contributor>
-			<name>Anne Husseini-Skalitz</name>
-		</contributor>
-		<contributor>
-			<name>Fabienne Perray-Gibert</name>
-		</contributor>
-	</contributors>
-
-	<scm>
-		<connection>scm:git:git:https://github.com/InseeFr/Eno.git</connection>
-		<developerConnection>scm:git:ssh:https://github.com/InseeFr/Eno.git</developerConnection>
-		<url>https://github.com/InseeFr/Eno.git</url>
-	</scm>
-
-	<issueManagement>
-		<system>GitHub</system>
-		<url>https://github.com/InseeFr/Eno/issues</url>
-	</issueManagement>
-
-	<ciManagement>
-		<system>Github Worflow</system>
-		<url>https://github.com/InseeFr/Eno/.github/worflows</url>
-	</ciManagement>
-
-	<distributionManagement>
-		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-		<repository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-		</repository>
-	</distributionManagement>
-
-	<properties>
-		<!-- Java -->
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
-		<!-- Source encoding -->
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-		<!-- Main dependencies -->
-		<saxon.version>12.9</saxon.version>
-		<eclipse.version>2.7.16</eclipse.version>
-		<jaxb-api.version>2.3.1</jaxb-api.version>
-		<fop.version>2.11</fop.version>
-		<commons-io.version>2.20.0</commons-io.version>
-		<guice.version>7.0.0</guice.version>
-		<!-- Logging API -->
-		<slf4j.version>2.0.17</slf4j.version>
-		<!-- Test dependencies -->
-		<junit.version>5.13.4</junit.version>
-		<xmlunit.version>2.10.4</xmlunit.version>
-		<apache-commons.version>3.18.0</apache-commons.version>
-		<log4j-slf4j2.version>2.25.1</log4j-slf4j2.version>
-		<!-- Build plugins -->
-		<source.plugin.version>3.3.1</source.plugin.version>
-		<javadoc.plugin.version>3.11.3</javadoc.plugin.version>
-		<!-- Sonar -->
-		<jacoco.version>0.8.13</jacoco.version>	
-		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
-		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-		<sonar.projectName>Eno-WS</sonar.projectName>
-		<sonar.language>java</sonar.language>
-		<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=UTF-8</argLine>
-	</properties>
-
-	<dependencies>
-		<!-- Main dependencies -->
-		<dependency>
-			<groupId>net.sf.saxon</groupId>
-			<artifactId>Saxon-HE</artifactId>
-			<version>${saxon.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.inject</groupId>
-			<artifactId>guice</artifactId>
-			<version>${guice.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>${commons-io.version}</version>
-		</dependency>
-
-		<!-- Jaxb -->
-		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>org.eclipse.persistence.moxy</artifactId>
-			<version>${eclipse.version}</version>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>eclipselink</artifactId>
-			<version>${eclipse.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-			<version>${jaxb-api.version}</version>
-		</dependency>
-
-		<!-- PDF dependency -->
-		<dependency>
-			<groupId>org.apache.xmlgraphics</groupId>
-			<artifactId>fop</artifactId>
-			<version>${fop.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>xml-apis</groupId>
-					<artifactId>xml-apis</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<!-- Logging API -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-
-		<!-- Test dependencies -->
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>${apache-commons.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-engine</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.xmlunit</groupId>
-			<artifactId>xmlunit-matchers</artifactId>
-			<version>${xmlunit.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-slf4j2-impl</artifactId>
-			<version>${log4j-slf4j2.version}</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.14.0</version>
-				<configuration>
-					<source>${maven.compiler.source}</source>
-					<target>${maven.compiler.target}</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>jaxb2-maven-plugin</artifactId>
-				<version>2.5.0</version>
-				<executions>
-					<execution>
-						<id>xjc-schema</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>xjc</goal>
-						</goals>
-						<configuration>
-							<packageName>fr.insee.eno.parameters</packageName>
-							<encoding>UTF-8</encoding>
-							<xjbSources>
-								<xjbSource>src/main/resources/params/schemas/jaxb/bindings.xjb</xjbSource>
-							</xjbSources>
-							<sources>
-								<source>src/main/resources/params/schemas/ENOParameters.xsd</source>
-							</sources>
-							<clearOutputDir>false</clearOutputDir>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.5.4</version>
-				<configuration>
-					<encoding>UTF-8</encoding>
-					<argLine>-Dfile.encoding=UTF-8
-						-Djavax.xml.bind.JAXBContextFactory=org.eclipse.persistence.jaxb.JAXBContextFactory</argLine>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>3.3.1</version>
-				<configuration>
-					<encoding>UTF-8</encoding>
-				</configuration>
-				<executions>
-					<execution>
-						<id>copy-resources</id>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>target/generated-sources/jaxb/fr/insee/eno/parameters</outputDirectory>
-							<resources>
-								<resource>
-									<directory>src/main/resources/params/schemas/jaxb</directory>
-									<includes>
-										<include>bindings.xml</include>
-										<include>jaxb.properties</include>
-									</includes>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>3.6.1</version>
-				<executions>
-					<execution>
-						<id>add-source</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>add-source</goal>
-						</goals>
-						<configuration>
-							<sources>
-								<source>${project.build.directory}/generated-sources/jaxb</source>
-							</sources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin> <!-- Replace this plugin? -->
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>3.5.1</version>
-				<executions>
-					<execution>
-						<phase>process-classes</phase>
-						<goals>
-							<goal>java</goal>
-						</goals>
-						<configuration>
-							<mainClass>fr.insee.eno.xsl.FodsToXSLCompiler</mainClass>
-							<systemProperties>
-								<property>
-									<key>dest</key>
-									<value>${project.basedir}/src/main/resources</value>
-								</property>
-								<property>
-									<key>log4j2.level</key>
-									<value>INFO</value>
-								</property>
-							</systemProperties>
-							<classpathScope>test</classpathScope>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-				<includes>
-					<include>**/config/*.xml</include>
-				</includes>
-			</resource>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>false</filtering>
-				<excludes>
-					<exclude>**/config/*.xml</exclude>
-				</excludes>
-			</resource>
-		</resources>
-	</build>
-
-	<profiles>
-		<profile>
-			<id>release</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-source-plugin</artifactId>
-						<version>${source.plugin.version}</version>
-						<executions>
-							<execution>
-								<id>attach-sources</id>
-								<goals>
-									<goal>jar-no-fork</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>${javadoc.plugin.version}</version>
-						<executions>
-							<execution>
-								<id>attach-javadocs</id>
-								<goals>
-									<goal>jar</goal>
-								</goals>
-								<configuration>
-									<failOnError>false</failOnError>
-								</configuration>
-
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<version>3.2.8</version>
-						<executions>
-							<execution>
-								<id>sign-artifacts</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-								<configuration>
-									<gpgArguments>
-										<arg>--pinentry-mode</arg>
-										<arg>loopback</arg>
-									</gpgArguments>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.sonatype.plugins</groupId>
-						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<version>1.7.0</version>
-						<extensions>true</extensions>
-						<configuration>
-							<serverId>ossrh</serverId>
-							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-							<autoReleaseAfterClose>true</autoReleaseAfterClose>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.jacoco</groupId>
-						<artifactId>jacoco-maven-plugin</artifactId>
-						<version>${jacoco.version}</version>
-						<executions>
-							<!-- Prepare the property pointing to the JaCoCo runtime agent which is 
-							passed as VM argument when the Maven Surefire plugin is executed. -->
-							<execution>
-								<id>pre-unit-test</id>
-								<goals>
-									<goal>prepare-agent</goal>
-								</goals>
-								<configuration>
-									<!-- Set the name of the property containing the settings for JaCoCo 
-									runtime agent. -->
-									<propertyName>surefireArgLine</propertyName>
-									<append>true</append>
-								</configuration>
-							</execution>
-							<execution>
-								<id>post-unit-test</id>
-								<phase>test</phase>
-								<goals>
-									<goal>report</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.sonarsource.scanner.maven</groupId>
-						<artifactId>sonar-maven-plugin</artifactId>
-						<version>4.0.0.4121</version>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
-
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+  <modules>
+    <module>eno-core</module>
+    <module>eno-ws</module>
+  </modules>
 </project>
